@@ -4,12 +4,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>my.proj.work</groupId>
+        <groupId>proj.work</groupId>
         <artifactId>openstack</artifactId>
         <version>0.1</version>
     </parent>
 
-    <artifactId>openstackmetricshandler</artifactId>
+    <groupId>org.opensearch.openstackMetricHandler</groupId>
+    <artifactId>openstack-metrics-handler</artifactId>
+    <version>0.1</version>
+    <packaging>jar</packaging>
 
     <properties>
         <ktor.version>2.3.7</ktor.version>
@@ -17,6 +20,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <kotlin.code.style>official</kotlin.code.style>
         <kotlin.compiler.jvmTarget>1.8</kotlin.compiler.jvmTarget>
+
+        <opensearch.version>3.0.0</opensearch.version>
     </properties>
 
     <repositories>
@@ -41,20 +46,32 @@
             <plugin>
                 <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-maven-plugin</artifactId>
+                <version>${kotlin.version}</version>
+                <extensions>true</extensions>
                 <executions>
                     <execution>
                         <id>compile</id>
-                        <phase>compile</phase>
                         <goals>
                             <goal>compile</goal>
                         </goals>
+                        <configuration>
+                            <sourceDirs>
+                                <sourceDir>${project.basedir}/src/main/kotlin</sourceDir>
+                                <sourceDir>${project.basedir}/src/main/java</sourceDir>
+                            </sourceDirs>
+                        </configuration>
                     </execution>
                     <execution>
                         <id>test-compile</id>
-                        <phase>test-compile</phase>
                         <goals>
                             <goal>test-compile</goal>
                         </goals>
+                        <configuration>
+                            <sourceDirs>
+                                <sourceDir>${project.basedir}/src/test/kotlin</sourceDir>
+                                <sourceDir>${project.basedir}/src/test/java</sourceDir>
+                            </sourceDirs>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
@@ -77,11 +94,52 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
                 <configuration>
-                    <source>21</source>
-                    <target>21</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.2.0</version>
+                <configuration>
+                    <finalName>${project.artifactId}</finalName>
+                    <archive>
+                        <manifestEntries>
+                            <Plugin-Class>org.opensearch.openstackMetricHandler.OpenStackMetricPlugin</Plugin-Class>
+                            <OpenSearch-Version>${opensearch.version}</OpenSearch-Version>
+                            <Name>openstack-metrics-handler</Name>
+                            <Description>REST plugin showing full DB health</Description>
+                            <Version>1.0.0</Version>
+                            <License>https://www.apache.org/licenses/LICENSE-2.0.txt</License>
+                            <Developer>hololight17</Developer>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.6.0</version>
+                <configuration>
+                    <createDependencyReducedPom>false</createDependencyReducedPom>
+                    <artifactSet>
+                        <excludes>
+                            <exclude>com.fasterxml.jackson.core:jackson-core:*</exclude>
+                            <exclude>com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:*</exclude>
+                        </excludes>
+                    </artifactSet>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
@@ -96,6 +154,7 @@
             <groupId>org.opensearch</groupId>
             <artifactId>opensearch</artifactId>
             <version>3.0.0</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>io.ktor</groupId>
@@ -127,14 +186,9 @@
             <version>${ktor.version}</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <version>1.7.36</version>
-        </dependency>
 
         <dependency>
-            <groupId>my.proj.work</groupId>
+            <groupId>proj.work</groupId>
             <artifactId>extractionlib</artifactId>
             <version>0.1</version>
             <scope>compile</scope>
